# livearchive

./: .gitignore  PKGBUILD  livearchive.py  pyproject.toml  requirements.txt
liblivearchive/: cache.py  entry.py
liblivearchive/scrapers/: __init__.py  ia.py  theeye.py
livearchive/: __init__.py  __main__.py  cache.py  defs.py  entry.py  log.py  model.py
livearchive/scrapers/: __init__.py  ia.py  myrient.py  theeye.py
systemd/: livearchive.service
